# econet-2021

doc/: doc.org  doc.tex
hardware/: BOM.csv
hardware/CAD/: ball_bracket.FCStd  drawer_lower_limit_mount.scad  drivers_mount.FCStd  drivers_mount.scad  stm_mount.FCStd  wire_bus_holder.scad
hardware/CAD/stl/: ball_bracket.stl  drawer_lower_limit_mount.stl  drivers_mount.stl  stm_mount.stl  wire_bus_holder.stl
software/: photo.py
software/common/: find_lines.py  hist_sorted.py  histograms.py  line_detection.py
software/peripheral-controller/: Cargo.toml  Embed.toml  memory.x
software/peripheral-controller/.cargo/: config
software/peripheral-controller/chassis/: Cargo.toml
software/peripheral-controller/chassis/src/: chassis.rs  lib.rs  movement_controller.rs
software/peripheral-controller/dc_motor/src/: lib.rs
software/peripheral-controller/drawers_controller/: Cargo.toml
software/peripheral-controller/drawers_controller/src/: lib.rs
software/peripheral-controller/encoder/src/: lib.rs
software/peripheral-controller/gyro/: Cargo.toml
software/peripheral-controller/gyro/src/: lib.rs
software/peripheral-controller/itg3205/: Cargo.toml
software/peripheral-controller/itg3205/src/: lib.rs  register.rs
software/peripheral-controller/main/: Cargo.toml  Embed.toml
software/peripheral-controller/main/src/: main.rs
software/peripheral-controller/motor/src/: lib.rs
software/peripheral-controller/pins_create_generator/: Cargo.toml
software/peripheral-controller/pins_create_generator/src/: lib.rs
software/peripheral-controller/rotary_encoder/: Cargo.toml
software/peripheral-controller/rotary_encoder/src/: lib.rs
software/peripheral-controller/servo/src/: lib.rs
software/peripheral-controller/src/: main.rs
software/peripheral-controller/wheel/: Cargo.toml
software/peripheral-controller/wheel/src/: lib.rs
software/peripheral-controller/wheel_position_controller/: Cargo.toml
software/peripheral-controller/wheel_position_controller/src/: lib.rs
software/robot-brain/: main.py
software/util/: take_samples.py
