[package]
name = "peripheral-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "^0.6.0"
cortex-m-rt = "^0.6.8"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.6"
nucleo-f401re = "0.4.1"

# defmt = "0.2.0"
# defmt-rtt = "0.2.0"
# panic-probe = { version = "0.2.0", features = ["print-defmt"] }

[[bin]]
name = "peripheral-controller"
test = false
bench = false

[profile.dev]
debug = true

[profile.release]
codegen-units = 1
debug = true
lto = true

