[package]
edition = "2021"
name = "chassis"
version = "0.1.0"

[dependencies]
libm = "0.2.1"
num-traits = { version = "0.2", default-features = false }
pid = "3.0.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

motor = { path = "../motor" }
encoder = { path = "../encoder" }
servo = { path = "../servo" }
gyro = { path = "../gyro" }

